1998-12-06  Roland McGrath  <roland@baalperazim.frob.com>

	* lmail.c (deliver, main): Add braces to silence gcc warning.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* lmail.c: Include <time.h> and <sys/time.h>.

1998-07-19  Roland McGrath  <roland@baalperazim.frob.com>

	* getty.c: Include <string.h> for basename decl.

Wed Feb 19 23:05:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c (argp_program_version): Make const.

Tue Oct 22 15:47:13 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c (options): Make -l/--use-lock-file hidden, as we don't
 	support it anyway (we just leave it here in case someone does
 	implement it, so they'll know the right option to use for
 	compatibility).

Thu Oct 17 11:06:44 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c (deliver): fsync the user's mailbox after delivery.

Mon Oct 14 21:36:29 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c: New file.
	* Makefile (targets): Add mail.local.
	(SRCS): Add lmail.c.
	(rc, mail.local): New rules.
	(%: %.sh): Rule removed.
	(INSTALL-mail.local-ops): New variable.

Thu Oct 10 16:12:55 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* rc.sh: Startup up sendmail if possible.

Thu Sep 12 16:50:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.

Wed Aug 14 10:22:39 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (getty-LDLIBS): New variable.
	(getty): Dependency on -lutil removed.
	(libutil-libsubst): Variable removed.

Tue Aug 13 08:13:04 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* rc.sh: When deleting files from /tmp, use -f flag to rm.

Sat Jul 20 01:06:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* getty.c (main): Get the tty name from the right element in ARGV.

Mon Jul 15 17:27:27 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* rc.sh: Create /var/run/uptime *after* clearing /var/run.  Always
 	create /var/run/mtab to keep e2fsck happy.
